<resources>
   <string name="app_name">kuku</string>
   <string name="menu_settings">Settings</string>
   <string name="title_activity_main">HomeActivity</string>

   <string name="login">Login</string>
   <string name="logout">Logout</string>
   <string name="send">Ku..Ku</string>
   <string name="username">Username</string>
   <string name="userid">User ID</string>
   <string name="password">Password</string>
   <string name="refresh">Refresh</string>

</resources>
