<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
        <ImageView
                android:src="@drawable/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/imageView"/>
        <TextView
                android:text="@string/username"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_username"/>
        <TextView
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password"/>
        <Button
                android:text="@string/login"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_login"/>


    </LinearLayout>
</RelativeLayout>